# Wifi-Placement-Algorithmn

./: CMakeLists.txt  read.md
include/navigine/indoor_routing/: geometry.h  graph.h  location_point.h  router.h
src/: geometry.cpp  graph.cpp  router.cpp
tests/: router_test.cpp
